--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -1,3 +1,7 @@
+{% if userecho is not defined %}
+  {% set userecho = true %}
+{% endif %}
+
 {% javascripts
   'js/jquery-1.8.2.prod.js'
   'js/jquery-ui-1.10.1.custom.min.js'
@@ -41,32 +45,34 @@
   });
 </script>
 
-<script type='text/javascript'>
+{% if userecho %}
+  <script type='text/javascript'>
 
-  var _ues = {
-  host:'muzich.userecho.com',
-  forum:'17651',
-  lang:'fr',
-  tab_corner_radius:5,
-  tab_font_size:20,
-  tab_image_hash:'Vm9zIHJldG91cnM%3D',
-  tab_chat_hash:'Y2hhdA%3D%3D',
-  tab_alignment:'right',
-  tab_text_color:'#000000',
-  tab_text_shadow_color:'#66666655',
-  tab_bg_color:'#F4F4F4',
-  tab_hover_color:'#D5D5D5'
-  };
+    var _ues = {
+    host:'muzich.userecho.com',
+    forum:'17651',
+    lang:'fr',
+    tab_corner_radius:5,
+    tab_font_size:20,
+    tab_image_hash:'Vm9zIHJldG91cnM%3D',
+    tab_chat_hash:'Y2hhdA%3D%3D',
+    tab_alignment:'right',
+    tab_text_color:'#000000',
+    tab_text_shadow_color:'#66666655',
+    tab_bg_color:'#F4F4F4',
+    tab_hover_color:'#D5D5D5'
+    };
 
-$(document).ready(function(){  
-(function() {
-    var _ue = document.createElement('script'); _ue.type = 'text/javascript'; _ue.async = true;
-    _ue.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.userecho.com/js/widget-1.4.gz.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(_ue, s);
-  })();
-});
+  $(document).ready(function(){  
+  (function() {
+      var _ue = document.createElement('script'); _ue.type = 'text/javascript'; _ue.async = true;
+      _ue.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.userecho.com/js/widget-1.4.gz.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(_ue, s);
+    })();
+  });
 
-</script>
+  </script>
+{% endif %}
 
 <script type="text/javascript">
   {% if app.user %}
