--- a/src/Muzich/CoreBundle/Resources/views/Element/share_from.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/share_from.html.twig
@@ -5,7 +5,7 @@
 {% block main_content %}
 
   {% include 'MuzichCoreBundle:Component:element_add_box.html.twig' with {
-    'box_title'     : 'home.add_element_box.title'|trans({}, 'navigationui'),
+    'box_title'     : 'home.add_element_box.title_external'|trans({}, 'navigationui'),
     'add_form_name' : 'add',
   } %}
 
