--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -129,7 +129,7 @@
   url_img_ajax_loader = "{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}";
   url_get_embed_for_element = "{{ path('url_get_embed_for_element') }}";
   url_helpbox_tags_favorites = "{{ path('helpbox_tags_favorites') }}";
-  
+  url_csrf = "{{ path('get_csrf_token') }}";
   url_subscription_or_login = "{{ path('subscribe_or_login') }}";
   url_email_not_confirmed = "{{ path('email_not_confirmed') }}";
   url_send_email_confirmation = "{{ path('send_email_confirmation') }}";
