Evolution #792: Log me and do what i want to do
+ Prise en charge de ajouter un élément
+ Prise en charge de ajouter un commentaire

--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -133,6 +133,7 @@
   url_subscription_or_login = "{{ path('subscribe_or_login') }}";
   url_email_not_confirmed = "{{ path('email_not_confirmed') }}";
   url_send_email_confirmation = "{{ path('send_email_confirmation') }}";
+  url_reload_top_and_side = "{{ path('reload_top_right_bars') }}";
   
   config_player_youtube_width = "{{ player_config_youtube_width }}";
   config_player_youtube_height = "{{ player_config_youtube_height }}";
