Evolution #788: Ajouter un élément a sa playlist
+ Ajout de la possibilité d'ajouter des liens/partages privées pour ses playlists
- A faire: tests

--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -2533,6 +2533,28 @@ div.social_buttons ul li.googleplus {
     margin-left: -25px;
 }
 
+a.button.toplist:visited
+{
+  color: white;
+}
+
+a.button.toplist
+{
+  float: right;
+}
+
+div.private_links form div.inputs
+{
+  float: right;
+}
+
+div.private_links textarea
+{
+  height: 60px;
+  width: 435px;
+}
+
+
 /*
 *
 *
