Anomalie #825: CSS chromium: playlist
+ fix css for chromium compatibility

--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -2254,6 +2254,11 @@ ul.playlist_elements li.playlist_element ul.elements li.element
   border-top: none;
 }
 
+ul.playlist_elements li.playlist_element div.actions.fixwidth
+{
+  width: 65px;
+}
+
 a.button img
 {
   float: left;
