fix social buttons

--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -2,6 +2,16 @@
   {% set userecho = true %}
 {% endif %}
 
+
+<script type="text/javascript" src="//apis.google.com/js/plusone.js">
+  {parsetags: 'explicit'}
+</script>
+
+<script type="text/javascript" src="//connect.facebook.net/fr_FR/all.js#xfbml=1"></script>
+
+<script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
+
+
 {% javascripts
   'js/jquery-1.8.2.prod.js'
   'js/jquery-ui-1.10.1.custom.min.js'
