Logiciel: Anomalie #876: add route parameter in template

--- a/src/Muzich/CoreBundle/Resources/views/Element/element.edit.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/element.edit.html.twig
@@ -6,7 +6,7 @@
 
   <span class="sinfo">{{ 'system.infos.normally_js'|trans({}, 'userui') }}</span>
 
-  <form novalidate name="{{ form_name }}" action="{{ path('element_update', {'element_id': element_id}) }}" method="post" {{ form_enctype(form) }}>
+  <form novalidate name="{{ form_name }}" action="{{ path('element_update', {'element_id': element_id, 'dom_id': 'element_' ~ element_id}) }}" method="post" {{ form_enctype(form) }}>
 
     {% include "MuzichCoreBundle:Element:form.edit.html.twig" with { 
       'form'          : form, 
