--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
@@ -31,6 +31,7 @@
     
     {% include "MuzichCoreBundle:SearchElement:default.html.twig" with{
         'display_autoplay'     : true,
+        'autoplay_shuffle'     : 'elements_get_filter_data_autoplay_favorite',
         'autoplay_context'     : 'favorite_user'
     } %}
     
