--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -82,6 +82,8 @@
   
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" with {
     'display_autoplay'     : true,
+    'autoplay_shuffle'     : 'elements_get_filter_data_autoplay_show',
+    'autoplay_shuffle_show_type': 'user',
     'autoplay_context'     : 'show_user'
   } %}
   
