modif ancienne et non commit

--- a/src/Muzich/CoreBundle/Resources/views/layout_iframe.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout_iframe.html.twig
@@ -3,7 +3,7 @@
   <head>
     <title>Muzi.ch - {% block title %}{% endblock %}</title>
     {% include 'MuzichCoreBundle:Layout:head.html.twig' with {
-      'userecho' : false
+      'userecho' : true
     } %}
     {% block css %}{% endblock %}
     {% block js %}{% endblock %}
