autoplay sguffle on my favorites page

--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/myList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/myList.html.twig
@@ -17,7 +17,9 @@
   
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" with{
       'display_autoplay'     : true,
-      'autoplay_context'     : 'favorite_my'
+      'autoplay_context'     : 'favorite_my',
+      'autoplay_shuffle'     : 'elements_get_filter_data_autoplay_favorite',
+      'autoplay_context'     : 'favorite_user'
   } %}
   
   {% if elements|length %}
